--- a/res/layout/registration_progress_activity.xml
+++ b/res/layout/registration_progress_activity.xml
@@ -25,7 +25,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dip"
                     android:layout_marginTop="10dip"
-                    android:background="@drawable/background_pane" >
+                    android:background="@drawable/background_pane"
+                    android:id="@+id/sms_alert_layout" >
 
                 <ImageView
                         android:id="@+id/alert"
