--- a/res/xml/preferences_advanced.xml
+++ b/res/xml/preferences_advanced.xml
@@ -2,7 +2,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
-                        android:defaultValue="false"
+                        android:defaultValue="true"
                         android:key="pref_toggle_push_messaging"
                         android:title="@string/preferences__signal_messages_and_calls"
                         android:summary="@string/preferences__free_private_messages_and_calls"/>
